fixed all pr changes